...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/switch_mode"
            style="@style/CameraActionButton.Portrait"
            android:drawableTop="@drawable/ic_videocam_white"
            android:drawablePadding="8dp"
            android:text="@string/switch_to_video"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/take"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/take"
            style="@style/CameraActionButton.Portrait"
            android:drawableTop="@drawable/capture_button"
...
