<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/top_actions_picture_container"
    android:layout_width="match_parent"
    android:layout_height="@dimen/buttons_container_height"
    android:background="@color/dark_grey">

    <TextView
        android:id="@+id/switch_facing_button"
        style="@style/CameraActionButton.Portrait"
        android:drawableTop="@drawable/ic_monochrome_photos"
        android:text="@string/front_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/flash_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/flash_button"
        style="@style/CameraActionButton.Portrait"
        android:drawableTop="@drawable/ic_flash_off"
        android:text="@string/flash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/settings_button"
        app:layout_constraintStart_toEndOf="@id/switch_facing_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settings_button"
        style="@style/CameraActionButton.Portrait"
        android:drawableTop="@drawable/ic_tune"
        android:text="@string/common_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/flash_button"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>